linux (1:3.18.22-2) UNRELEASED; urgency=medium

  * Small fix in bubbatwo driver

 -- Charles Leclerc <leclerc.charles@gmail.com>  Tue, 06 Oct 2015 10:19:55 -0400

linux (1:3.18.22-1) jessie; urgency=medium

  * New upstream version 
  * Re-added CONFIG_KEYBOARD_GPIO in b3 config for bubba-buttond

 -- Charles Leclerc <leclerc.charles@gmail.com>  Mon, 05 Oct 2015 18:51:24 -0400

linux (1:3.18.21-2) jessie; urgency=medium

  * Re-added rev 1 Bubba|2 DTS file see http://forum.excito.com/viewtopic.php?f=7&t=5821

 -- Charles Leclerc <leclerc.charles@gmail.com>  Sun, 13 Sep 2015 21:32:35 -0400

linux (1:3.18.21-1) jessie; urgency=medium

  * New upstream version

 -- Charles Leclerc <leclerc.charles@gmail.com>  Fri, 04 Sep 2015 21:26:59 -0400

linux (1:3.18.20-1) jessie; urgency=medium

  * New upstream version

 -- Charles Leclerc <leclerc.charles@gmail.com>  Tue, 11 Aug 2015 18:20:50 +0000

linux (1:3.18.13-1) jessie; urgency=medium

  * New upstream version ; patches, configuration and build adaptated
  * debian packaging removed from upstream makefiles
  * uImage build quirks added (thank to sakaki's work for gentoo on b2/b3)
  * Changed default shutdown behaviour to board reset for both b2 and b3

 -- Charles Leclerc <leclerc.charles@gmail.com>  Sun, 12 Apr 2015 19:20:39 +0000

linux (1:3.2.68-1) UNRELEASED; urgency=low

  * New upstream version
  * Added kirkwod U-Boot L2 cache fix
  * Added all available colors inside gpio driver

 -- Charles Leclerc <leclerc.charles@gmail.com>  Fri, 20 Mar 2015 02:18:11 +0000

linux (1:3.2.66-1) wheezy; urgency=low

  * Initial release for the LTS 3.2 series

 -- Charles Leclerc <leclerc.charles@gmail.com>  Sat, 24 Jan 2015 17:17:03 -0500

linux (1:2.6.39.4-13) vincent; urgency=low

  * Separate the header packages for the differenc architecturies

 -- Carl Fürstenberg <carl@excito.com>  Fri, 20 Apr 2012 16:25:01 +0200

linux (1:2.6.39.4-12) vincent; urgency=low

  * import changed kernel options from B3 to B2 kernel config
